--- a/nahbah-frontend/src/i18n/locales/en/pages.json
+++ b/nahbah-frontend/src/i18n/locales/en/pages.json
@@ -1,49 +1,54 @@
 {
   "home": {
     "hero": {
-      "title": "NOT A HOUSE",
-      "subtitle": "BUT A HOME",
-      "description": "Essential resources for building emergency shelter and creating sustainable housing solutions when you need them most.",
-      "cta": "Start Building"
-    },
-    "features": {
-      "materials": {
-        "title": "Materials Guide",
-        "description": "Learn what materials work best for different shelter types and weather conditions."
-      },
-      "techniques": {
-        "title": "Building Techniques", 
-        "description": "Step-by-step instructions for proven construction methods and safety practices."
-      },
-      "designs": {
-        "title": "Tested Designs",
-        "description": "Access blueprints and plans that have been tested in real-world conditions."
-      }
+      "imageAlt": "Creative home interior",
+      "titlePart1": "A GUIDE FOR",
+      "titleHighlight": "CREATIVES",
+      "concept1": "ARCHITECTURE",
+      "concept2": "CREATIVITY",
+      "description": "A home is more than just shelter—it's a place of stability, privacy, and community. This initiative supports those creating their own homes in difficult circumstances by providing a platform for sharing designs.",
+      "learnMoreBtn": "LEARN MORE",
+      "viewDesignsBtn": "VIEW DESIGNS"
     }
   },
-  "essentials": {
-    "title": "ESSENTIAL KNOWLEDGE",
-    "subtitle": "Master the fundamentals",
-    "description": "Learn the core techniques and materials needed to build safe, weatherproof shelter in any situation.",
-    "weatherProtection": {
-      "title": "WEATHER PROTECTION METHODS",
-      "description": "Master these four essential techniques to create comprehensive weather protection for any shelter using accessible materials and proven construction methods.",
-      "warmth": {
-        "title": "WARMTH",
-        "description": "Thermal insulation techniques to maintain comfortable interior temperature and prevent heat loss"
-      },
-      "stayingDry": {
-        "title": "STAYING DRY", 
-        "description": "Vapor barrier systems and moisture control to prevent water damage and condensation"
-      },
-      "windproofing": {
-        "title": "WINDPROOFING",
-        "description": "Draft protection and air sealing while maintaining necessary ventilation for safety"
-      },
-      "dryGround": {
-        "title": "DRY GROUND",
-        "description": "Foundation protection and elevation techniques to prevent ground moisture infiltration"
+  "about": {
+    "hero": {
+      "backgroundText": "About",
+      "title": "Reimagining Home & Shelter",
+      "subtitle": "Not a House, but a Home – We believe in the power of self-built spaces to create stability and dignity. Our goal is to support, inspire, and empower people to build homes that truly feel like home.",
+      "paragraph1": "Housing is a fundamental right, yet many people are forced to create their own shelters outside traditional systems. This web application is a resource for those who build homes from found materials, as well as for advocates and architects working in solidarity with unhoused communities.",
+      "paragraph2": "A home is more than a shelter—it's a place of stability, privacy, and connection. Through design knowledge, creativity, and shared solutions, we support self-built housing as a pathway to dignity and security.",
+      "learnMoreBtn": "Learn More"
+    },
+    "mission": {
+      "title": "OUR MISSION",
+      "paragraph1": "As members of the Research Group for Solidarity in Architecture, we believe that architects and architecture students can play a role in alleviating social problems. On this site, we want to spread basic knowledge that will help create a safer environment. A built environment that can replace the inhumane world of night shelters and provide temporary shelter for those who find it difficult to survive on their own.",
+      "paragraph2": "We encourage all architects and students to look at the world around them with a slightly different perspective. Discover the possibilities of the freely available materials around us. Let's help build temporary shelters protected from wind, cold, and rain together."
+    },
+    "approach": {
+      "title": "Our Approach",
+      "paragraph1": "We combine architectural expertise with community knowledge to create solutions that are practical, sustainable, and empowering. Our resources are developed in collaboration with people who have direct experience with self-built housing.",
+      "paragraph2": "Every design, guide, and material suggestion on this platform is accessible, and adaptable to different circumstances and resource availability and many of them are tested."
+    },
+    "getInvolved": {
+      "title": "Get Involved",
+      "paragraph1": "Whether you're looking to improve your own shelter, support someone else's housing journey, or advocate for housing justice, there are many ways to participate in our community.",
+      "paragraph2": "Browse our resource library, contribute design ideas, share success stories, or volunteer your skills. Together, we can transform the way we think about housing and create more pathways to dignified homes for all."
+    },
+    "impact": {
+      "title": "OUR IMPACT",
+      "paragraph1": "This web application is a resource for those who build homes from found materials, as well as for advocates and architects working in solidarity with unhoused communities.",
+      "paragraph2": "A home is more than a shelter—it's a place of stability, privacy, and connection. Through our resources and community, we're helping people create dignified living spaces regardless of their circumstances.",
+      "stats": {
+        "solutions": "Housing Solutions",
+        "communities": "Communities Served",
+        "people": "People Helped"
       }
+    },
+    "cta": {
+      "title": "Ready to Make a Difference?",
+      "description": "Whether you're building your own home, supporting others, or advocating for housing justice, we invite you to join our community and be part of the solution.",
+      "button": "Get Started Today"
     }
   }
 }
