translate essentials page

--- a/nahbah-frontend/src/i18n/locales/en/common.json
+++ b/nahbah-frontend/src/i18n/locales/en/common.json
@@ -1,14 +1,7 @@
 {
   "buttons": {
-    "learnMore": "Learn More",
-    "viewDetails": "View Details",
-    "getStarted": "Get Started",
-    "close": "Close"
-  },
-  "common": {
-    "loading": "Loading...",
-    "error": "Something went wrong",
-    "materials": "Materials",
-    "techniques": "Techniques"
+    "close": "Close",
+    "submit": "Submit",
+    "cancel": "Cancel"
   }
 }
